# ullyses-utils

./: README.md  em-lkca-19_g430l_archival.yaml  pyproject.toml  setup.py  v-ce-ant_g430l_archival.yaml
.github/workflows/: publish-to-pypi.yml  publish.yml
data/lcogt_catalogs/: CVSO-104_apass.txt  CVSO-58_apass.txt  SZ45_apass.txt  SZ71_apass.txt
data/lcogt_photometry/: SZ45_phot.txt  SZ69_phot.txt
data/stis_configs/: chx18n_g230l.yaml  cvso-109_g430l.yaml  cvso-58_g430l.yaml  sstc2dj160000.6-422158_g230l.yaml  sstc2dj160000.6-422158_g750l.yaml  sz111_g230l.yaml  sz66_g230l.yaml  sz71_g230l.yaml  sz72_g430l.yaml  sz76_g750l.yaml  sz77_g430l.yaml  v-in-cha_g230l.yaml
data/target_metadata/: 2021-07-27_ULLYSES_MassiveStar_Targets.csv  CrA_sample_for_website.csv  LMC_Preferred_Names.csv  LMC_SMC_sample.xlsx  LMC_ULL_AR_STIS_exposures.csv  LMC_sample_for_website_clean_newcoord_all_columns_order.csv  Lupus_sample_for_website.csv  SMC_AR_data_tracking.xlsx  SMC_Preferred_Names.csv  SMC_sample_for_website_clean_newcoord_and_names_all_columns.csv  Taurus_sample_for_website.csv  alias_file_dp.csv  cy27_assignees.csv  cy28_assignees.csv  cy29_assignees.csv  full_sample_CTTS.xlsx  julia_alias_file.csv  low-metallicity-galaxy-targets.csv  low_mass_stars_archive_CJK_JRD_STIS.csv  lowmass_monitoring_targets_from_website.csv  lowmass_preferred_names.csv  lowmass_targets_from_website.csv  pd_all_aliases.csv  pd_all_aliases.json
data/vignette_scaling/: le9d1ekwq_scale.txt  le9d1ifeq_scale.txt  le9d1lioq_scale.txt  lek71dx4q_scale.txt
src/ullyses_utils/: README.md  __init__.py  lcogt_dr3.pro  lcogt_dr4.pro  lcogt_dr5.pro  lcogt_dr6.pro  lcogt_dr7.pro  lcogt_phot.pro  lcogt_uphot.pro  match_aliases.py  select_pids.py  ullyses_config.py  write_calibration_db.py
tech_utils/files/: Sigma Ori_sample_for_website.csv  eps Cha_sample_for_website.csv
utils/: lcogt_combine.pro  lcogt_dr4.pro  lcogt_dr5.pro  lcogt_dr5_u.pro  lcogt_dr6.pro  lcogt_dr6_u.pro  lcogt_orion.pro  lcogt_phot.pro  lcogt_uphot.pro  make_alias_file.py  make_master_alias.py  match_aliases.py  parse_csv.py  select_pids.py  ullyses_config.py  vignette_correct.pro  write_calibration_db.py  write_internal_db.py
utils/data/: custom_coadd.csv  internal_database.csv  (+3 more)
(+1001 files in other folders)
